update operator deployment files

--- a/deploy/operator/fabedge-operator.yaml
+++ b/deploy/operator/fabedge-operator.yaml
@@ -29,8 +29,8 @@ spec:
             # connector组件所用的configmap名称
             - -connector-config=connector-config
             # 边缘节点生成的证书的ID的格式，{node}会被替换为节点名称
-            - -endpoint-id-format=C=CH, O=strongSwan, CN={node}
-            - -masq-outgoing=false
+            - -endpoint-id-format=C=CN, O=StrongSwan, CN={node}
+            - -masq-outgoing=true
             - -v=5
       hostNetwork: true
       serviceAccountName: fabedge-operator
