--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,5 +17,21 @@ jobs:
       with:
         go-version: 1.16
 
-    - name: Build
-      run: make
+    - name: Build Images
+      run: |
+        make connector-image
+        make operator-image
+        make agent-image
+        make strongswan-image
+
+    - name: Push Images
+      env:
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      run: |
+        echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        docker push fabedge/connector 
+        docker push fabedge/operator
+        docker push fabedge/agent
+        docker push fabedge/strongswan
+      if: contains(github.ref, "main")
