--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,10 @@ jobs:
       with:
         go-version: 1.16
 
+    - name: Remove CN proxies
+      run: |
+        bash build/utils/prebuild_for_github.sh
+        
     - name: Build Images
       run: |
         make connector-image
