--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
     - name: Build Images
       run: |
         make strongswan-image
+        make installer-image
         make connector-image
         make operator-image
         make agent-image
@@ -40,3 +41,4 @@ jobs:
         docker push fabedge/operator
         docker push fabedge/agent
         docker push fabedge/strongswan
+        docker push fabedge/installer
