fix error config in deployment files

--- a/deploy/operator/rbac.yaml
+++ b/deploy/operator/rbac.yaml
@@ -29,8 +29,9 @@ rules:
   - apiGroups:
       - ""
     resources:
-      - configmaps
       - pods
+      - configmaps
+      - secrets
     verbs:
       - get
       - list
