connector: use args in deployment file
to use args in deployment file of connector insteading of configmap
the cm of connector-config is used by operator only.

--- a/deploy/connector/deploy.yaml
+++ b/deploy/connector/deploy.yaml
@@ -33,6 +33,7 @@ spec:
       containers:
         - name: strongswan
           image: fabedge/strongswan
+          imagePullPolicy: IfNotPresent
           readinessProbe:
             exec:
               command:
@@ -58,6 +59,15 @@ spec:
             capabilities:
               add: ["NET_ADMIN"]
           image: fabedge/connector
+          imagePullPolicy: IfNotPresent
+          args:
+            - -tunnel-config=/etc/fabedge/tunnels.yaml
+            - -cert-file=/etc/ipsec.d/certs/tls.crt
+            - -vici-socket=/var/run/charon.vici
+            - -cni-type=CALICO
+            - -sync-period=1m
+            - -debounce-duration=5s
+            - -v=5
           volumeMounts:
             - name: var-run
               mountPath: /var/run/
