deploy: add connector args to operator deployment

--- a/deploy/operator/rbac.yaml
+++ b/deploy/operator/rbac.yaml
@@ -43,8 +43,9 @@ rules:
   - apiGroups:
       - ""
     resources:
-      - configmaps/status
       - pods/status
+      - configmaps/status
+      - secrets/status
     verbs:
       - get
       - update
