--- a/deploy/operator/fabedge-operator.yaml
+++ b/deploy/operator/fabedge-operator.yaml
@@ -31,7 +31,7 @@ spec:
             # 边缘节点可访问的connector的IP地址
             - -connector-ip=10.10.10.10
             # 请提供非边缘Pod的IP所在的网段以及Service ClusterIP所属的网段
-            - -connector-subnets="10.233.64.0/18,10.233.0.0/18"
+            - -connector-subnets=10.233.64.0/18,10.233.0.0/18
             # 边缘节点生成的证书的ID的格式，{node}会被替换为节点名称
             - -endpoint-id-format=C=CN, O=fabedge.io, CN={node}
             - -masq-outgoing=false
