Use publicAddresses to replace IP of Tunnel Endpoint
A tunnel endpoint can have multiple addresses as remote or local
addresses and these addresses can also be DNS names. So it's better
and flexible to use addresses instead of IP only.

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -28,8 +28,8 @@ spec:
             - -strongswan-image=fabedge/strongswan
             # connector组件所用的configmap名称
             - -connector-config=connector-config
-            # 边缘节点可访问的connector的IP地址
-            - -connector-ip=10.10.10.10
+            # 边缘节点可访问的connector的IP地址或域名，多个地址用逗号分割
+            - -connector-public-addresses=10.10.10.10
             # 请提供非边缘Pod的IP所在的网段以及Service ClusterIP所属的网段
             - -connector-subnets=10.233.64.0/18,10.233.0.0/18
             # 边缘节点生成的证书的ID的格式，{node}会被替换为节点名称
