build: add install-test-dependencies target

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Remove proxies
       run: |
         bash build/utils/no_proxy.sh
-        
+
     - name: Build
       run: |
-        make all
+        make install-test-dependencies all
