--- a/deploy/helm-chart/templates/operator-deploy.yaml
+++ b/deploy/helm-chart/templates/operator-deploy.yaml
@@ -20,16 +20,16 @@ spec:
           image: {{ .Values.operator.image.repository }}:{{ .Values.operator.image.tag | default .Chart.AppVersion }}
           imagePullPolicy: {{ .Values.operator.image.pullPolicy }}
           args:
-            - -namespace={{ .Release.Namespace }}
-            - -edge-pod-cidr={{ .Values.operator.edgePodCIDR }}
-            - -agent-image={{ .Values.agent.image.repository }}:{{ .Values.agent.image.tag | default .Chart.AppVersion }}
-            - -strongswan-image={{ .Values.strongswan.image.repository }}:{{ .Values.strongswan.image.tag | default .Chart.AppVersion }}
-            - -connector-config=connector-config
-            - -connector-public-addresses={{ .Values.operator.connectorPublicAddresses }}
-            - -connector-subnets={{ .Values.operator.connectorSubnets }}
-            - -endpoint-id-format=C=CN, O=fabedge.io, CN={node}
-            - -masq-outgoing={{ .Values.operator.masqOutgoing }}
-            - -enable-proxy={{ .Values.operator.enableProxy }}
+            - --namespace={{ .Release.Namespace }}
+            - --edge-pod-cidr={{ .Values.operator.edgePodCIDR }}
+            - --agent-image={{ .Values.agent.image.repository }}:{{ .Values.agent.image.tag | default .Chart.AppVersion }}
+            - --agent-strongswan-image={{ .Values.strongswan.image.repository }}:{{ .Values.strongswan.image.tag | default .Chart.AppVersion }}
+            - --connector-config=connector-config
+            - --connector-public-addresses={{ .Values.operator.connectorPublicAddresses }}
+            - --connector-subnets={{ .Values.operator.connectorSubnets }}
+            - --endpoint-id-format=C=CN, O=fabedge.io, CN={node}
+            - --agent-masq-outgoing={{ .Values.operator.masqOutgoing }}
+            - --agent-enable-proxy={{ .Values.operator.enableProxy }}
             - -v=5
           {{- if .Values.operator.resources }}
           resources:
