connector: change update strategy to recreate

--- a/deploy/connector.yaml
+++ b/deploy/connector.yaml
@@ -8,6 +8,8 @@ spec:
   selector:
     matchLabels:
       app: connector
+  strategy:
+      type: Recreate
   template:
     metadata:
       labels:
