Makefile: update makefile and github workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,7 @@ jobs:
         
     - name: Build Images
       run: |
-        make strongswan-image
-        make installer-image
-        make connector-image
-        make operator-image
-        make agent-image
-        make cert-image
+        make fabedge-images installer-image
 
     - name: Push Images
       env:
@@ -41,6 +36,5 @@ jobs:
         docker push fabedge/connector 
         docker push fabedge/operator
         docker push fabedge/agent
-        docker push fabedge/strongswan
-        docker push fabedge/installer
         docker push fabedge/cert
+        docker push fabedge/installer
