helm-chart: add connector-strategy

--- a/deploy/helm-chart/templates/connector-deploy.yaml
+++ b/deploy/helm-chart/templates/connector-deploy.yaml
@@ -10,6 +10,10 @@ spec:
   selector:
     matchLabels:
       {{- include "connector.labels" . | nindent 6 }}
+  {{- if .Values.connector.strategy }}
+  strategy:
+{{ toYaml .Values.connector.strategy | trim | indent 4 }}
+  {{- end }}
   template:
     metadata:
       labels:
