--- a/deploy/helm-chart/values.yaml
+++ b/deploy/helm-chart/values.yaml
@@ -50,6 +50,9 @@ connector:
 
   syncPeriod: 1m
 
+  strategy:
+    type: Recreate
+
   affinity:
     nodeAffinity:
       requiredDuringSchedulingIgnoredDuringExecution:
