--- a/deploy/helm-chart/Chart.yaml
+++ b/deploy/helm-chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: fabedge
-version: 0.0.1
+version: "0.2.0"
 type: application
 description: FabEdge is an open source edge networking solution based on kubernetes and kubeedge. 
 home: https://www.fabedge.io
