operator: fix leader election bug

--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -58,6 +58,12 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - "coordination.k8s.io"
+    resources:
+      - "leases"
+    verbs:
+      - "*"
 ---
 
 apiVersion: v1
