--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -64,6 +64,15 @@ rules:
       - "leases"
     verbs:
       - "*"
+  - apiGroups:
+      - crd.projectcalico.org
+    resources:
+      - ipamblocks
+    verbs:
+      - get
+      - list
+      - watch
+
 ---
 
 apiVersion: v1
