helm-chart: update chart

--- a/deploy/helm-chart/templates/cert.yaml
+++ b/deploy/helm-chart/templates/cert.yaml
@@ -92,6 +92,13 @@ metadata:
 spec:
   template:
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: node-role.kubernetes.io/connector
+                operator: Exists
       initContainers:
       - name: cert-gen-ca
         image: {{ .Values.cert.image.repository }}:{{ .Values.cert.image.tag | default .Chart.AppVersion }}
