--- a/deploy/helm-chart/Chart.yaml
+++ b/deploy/helm-chart/Chart.yaml
@@ -3,9 +3,9 @@ name: fabedge
 version: "0.3.0"
 type: application
 description: FabEdge is an open source edge networking solution based on kubernetes and kubeedge. 
-home: https://www.fabedge.io
+home: http://www.fabedge.io
 sources:
-  - http://github.com/FabEdge/fabedge
+  - https://github.com/FabEdge/fabedge
 keywords:
   - fabedge
   - network
