--- a/deploy/helm-chart/values.yaml
+++ b/deploy/helm-chart/values.yaml
@@ -21,7 +21,7 @@ operator:
   # CIDR used by pod & service in the cloud k8s cluster
   connectorSubnets: 10.233.64.0/18,10.233.0.0/18
 
-  edgeLabels: node-role.kubernetes.io/connector
+  edgeLabels: node-role.kubernetes.io/edge
 
   affinity:
     nodeAffinity:
