--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -4,7 +4,7 @@ metadata:
   name: fabedge-operator
 rules:
   - apiGroups:
-      - community.fabedge.io
+      - fabedge.io
     resources:
       - communities
     verbs:
