--- a/deploy/helm-chart/Chart.yaml
+++ b/deploy/helm-chart/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: fabedge
 version: "0.3.0"
 type: application
-description: FabEdge is an open source edge networking solution based on kubernetes and kubeedge. 
+description: FabEdge is an open source edge networking solution based on kubernetes. 
 home: http://www.fabedge.io
 sources:
   - https://github.com/FabEdge/fabedge
@@ -13,4 +13,4 @@ keywords:
 maintainers: 
   - name: fabedge
     email: fabedge@beyondcent.com
-appVersion: "v0.3.beta"
+appVersion: "v0.3"
