operator: let connector controller to generate tls secret for connector

--- a/deploy/connector.yaml
+++ b/deploy/connector.yaml
@@ -95,4 +95,4 @@ spec:
             items:
               - key: ipsec.secrets
                 path: ipsec.secrets
-            secretName: cloud-connector
+            secretName: connector-tls
