--- a/deploy/connector.yaml
+++ b/deploy/connector.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: connector
+  name: fabedge-connector
   namespace: fabedge
 spec:
   replicas: 1
