--- a/deploy/operator-svc.yaml
+++ b/deploy/operator-svc.yaml
@@ -1,7 +1,8 @@
+# 只有host集群才需要生成
 apiVersion: v1
 kind: Service
 metadata:
-  name: operator
+  name: fabedge-operator-api
 spec:
   selector:
     app: fabedge-operator
