deploy: fix wrong api-server-tls secret volume

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -81,6 +81,6 @@ spec:
               items:
                   - key: tls.crt
                     path: tls.crt
-                  - key: tls.crt
-                    path: tls.crt
+                  - key: tls.key
+                    path: tls.key
               secretName: api-server-tls
